# learn_ros2

install/: local_setup.sh  setup.sh
install/sherlock/lib/sherlock/: anderson  sherlock1  sherlock2
install/sherlock/share/ament_index/resource_index/package_run_dependencies/: sherlock
install/sherlock/share/ament_index/resource_index/parent_prefix_path/: sherlock
install/sherlock/share/sherlock/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sherlock/share/sherlock/cmake/: sherlockConfig-version.cmake  sherlockConfig.cmake
install/sherlock/share/sherlock/environment/: ament_prefix_path.dsv  path.dsv
install/week0_tutorials/share/week0_tutorials/: package.sh
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/sherlock/lib/sherlock/: sherlock1
src/install/sherlock/share/sherlock/: package.dsv  package.ps1  package.sh  package.xml  sherlock_andy.launch.py
src/install/week0_tutorials/lib/week0_tutorials/: subsciber
src/install/week0_tutorials/share/week0_tutorials/: package.sh  package.xml
src/log/: latest_build
src/sherlock/: CMakeLists.txt
src/sherlock/launch/: sherlock_andy_launch.py
src/sherlock/src/: anderson.cpp  sherlock1.cpp  sherlock2.cpp
src/week0_tutorials/: setup.py
